# KnittingPathFinder

./: .travis.yml  CMakeLists.txt  README.md  build.sh
include/: MainWidget.hpp  PathFinder.hpp  RenderArea.hpp
src/: MainWidget.cpp  PathFinder.cpp  RenderArea.cpp  main.cpp
